= v0.5.2 - EDGE
* Ext 3.2.1
* Fix: Netzke::Base.before_load is now also called for the widgets embedded directly into a view.
* New: support for external stylesheets.
* Fix: the "value" column type has been changed to text to prevent migration problems is some cases

= v0.5.1 - 2010-02-26
* Compatibility with Ext 3.1.1
* New: <tt>Netzke.page</tt> object now contains all the widgets declared on the page
* Code: replaced (references to) deprecated function names

= v0.5.0 - 2010-01-10
* Compatibility with Ext 3.1.0
* API change: Netzke widget's now should be declared directly in the views instead of controllers.
* API change: all ExtJS and Netzke JavaScript and styles are now loaded with the help of <tt>netzke_init</tt> helper.
* API change: <tt>persistence_key</tt> option replaces <tt>persistent_config_id</tt> option.
* Impr: headers in panels in the "config" mode now show the widget's global ID.
* New: required ExtJS version check introduced at initial Netzke load.
* Depr: :widget_class_name option is deprecated, use :class_name.
* DRY: now there's no need to always define "actions" method, use it to override the defaults, which are automatically calculated based on configuration for toolbars/menu.
* Impr: each generated JS class now has its unique xtype, e.g. "netzkegridpanel".
* Fix: FeedbackGhost moved over from netzke-basepack.

= v0.4.5.2 - 2009-11-09
* Fix: Hash#convert_keys and Array#convert_keys in core extensions are now renamed into deep_convert_keys, and now always plainly do what they're expected to do: recursively convert keys according to given block.

= v0.4.5.1 - 2009-11-09
* Regression: fixing inheritance and caching.
* FeedbackGhost is too simple to be a Netzke widget (having no server part), so, moved to static JavaScript.

= v0.4.5 - 2009-11-08
* API change: Netzke::Base: <tt>id_name</tt> accessor renamed to <tt>global_id</tt>
* Code: several internal code changes
* Code: lightly better test coverage