@@ -3,6 +3,7 @@
 * Fix: Netzke::Base.before_load is now also called for the widgets embedded directly into a view.
 * New: support for external stylesheets.
 * Fix: the "value" column type has been changed to text to prevent migration problems is some cases
+* New: global_persistent_config method allows accessing persistent storage with no owner (widget) assigned
 
 = v0.5.1 - 2010-02-26
 * Compatibility with Ext 3.1.1
